# octane11-challenge

./: Dockerfile  LICENSE  README.md  requirements.txt  setup.cfg
src/octanexchange/: conf.yaml  config.py  dependencies.py  exrates.py
src/octanexchange/application/: convert.py  history.py
src/octanexchange/domain/: currency.py  exchange_rate.py  repositories.py
src/octanexchange/infrastructure/: exchange_rate_io.py  frankfurter_http_repositories.py
tests/e2e/: e2e_test.py
tests/unit/application/: convert_test.py  fakes.py  history_test.py
