[metadata]
name = octanexchange
author = David Leon Fernandez
version = 1.0
description = Exchange rates Python CLI app
long_description = Exchange rates Python CLI app able to export historical exchange rates and convert between currencies
keywords = exchange,rates,currency,offer
license = MIT
url = 'https://github.com/davidleonfdez/octane11-challenge'
[options]
install_requires =
    requests
    pyyaml
packages = find:
package_dir =
    =src
[options.extras_require]
dev =
    pytest
